<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">aRound Table Lite</string>
    <string name="welcome_message_title">Welcome to use aRound Table！</string>
    <string name="welcome_message">To get started, you need to finish Google account authentication.</string>
    <string name="create_project_message">You have no project now. Create a new one?</string>
    <string name="exceed_project_limit">You are using Lite version. Exceed project limit!</string>
    <string name="register_finished">Authentication Finished</string>
    <string name="retriving_existed_data">Retrieving existing projects...</string>
    <string name="processing">Processing</string>
    <string name="confirm">Confirm</string>
    <string name="edit_project">Edit Project</string>
    <string name="quit_project">Quit Project</string>
    <string name="confirm_quit_project">Quit Confirmation</string>
    <string name="quit_project_prompt">Quitting would delete every task and event under this project. Are you sure you want to proceed?</string>
    <string name="view_finished_items">Finished Items</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="confirm_logout">Logout would delete every project, task and event on your phone. Are you sure you want to proceed?</string>
    <string name="done">Finish</string>
    <string name="okay">OK</string>
    <string name="cancel">Cancel</string>
    <string name="setting_days">Due Date</string>
    <string name="dayafter">days</string>
    <string name="overdue">Overdue</string>
    <string name="due_today">Today</string>
    <string name="undetermined">Due Someday</string>
    <string name="item_operations">Item Operations</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="select_project">Select a project</string>
    <string name="enter_name_and_color">Choose a name and a color</string>
    <string name="enter_project_name_here">Enter project name here</string>
    <string name="create_project">Create</string>
    <string name="add_task">Single Task</string>
    <string name="add_batch">Batch of Tasks</string>
    <string name="add_event">Event</string>
    <string name="owned_task_event">My Items</string>
    <string name="project_task_event">Items of %1$s</string>
    <string name="notification">Notifications</string>
    <string name="feedback_mail_title">[aRound Table] Feedback</string>
    <string name="contacts">Contacts</string>
    <string name="gorup_docs">Shared Notes</string>
    <string name="gorup_docs_not_ready">Shared notes is not ready yet,\n please retry after sync completed</string>
    <string name="gorup_docs_confirm_title">Save changes?</string>
    <string name="gorup_docs_confirm_message">The content of shared notes has been changed, do you wish to save it?</string>
    <string name="email_to_invite">Email Address</string>
    <string name="invite_member">Invite Members</string>
    <string name="invite">Invite</string>
    <string name="item_overdue">%1$s overdue item(s)</string>
    <string name="project_title">Project Title：</string>
    <string name="finished_task_under_project">Finished items under 「%1$s」:</string>
    <string name="set_undone">Set Undone</string>
    <string name="syncing">Syncing...</string>
    <string name="start_sync">Start syncing</string>
    <string name="internet_connection_problem">Sync Failure (No Internet Connection)</string>
    <string name="remote_server_problem">Remote Server Error. Try again later.</string>
    <string name="cannot_add_task_connection_problem">Unable to add new task(s) (No Internet Connection)</string>
    <string name="cannot_add_task_server_problem">Unable to add new task(s) (Remote Server Error)</string>
    <string name="cannot_add_event_connection_problem">Unable to add new event(s) (No Internet Connection)</string>
    <string name="cannot_add_event_server_problem">Unable to add new event(s) (Remote Server Error)</string>
    <string name="cannot_add_project_connection_problem">Unable to create new project (No Internet Connection)</string>
    <string name="cannot_add_project_server_problem">Unable to create new project (Remote Server Error)</string>
    <string name="cannot_quit_project_connection_problem">Unable to quit project (No Internet Connection)</string>
    <string name="cannot_quit_project_server_problem">Unable to quit project (Remote Server Error)</string>
	<string name="cannot_update_notepad_connection_problem">Unable to update group notepad (No Internet Connection)</string>
    <string name="cannot_update_notepad_server_problem">Unable to update group notepad (Remote Server Error)</string>
    <string name="add_batch_tasks">Add New Task</string> 
    <string name="item_title">Title:</string>
    <string name="create_under">Under:</string>
    <string name="due">Due:</string>
    <string name="date">Date:</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="location">Place:</string>
    <string name="no_dependable_task">No Dependent Task</string>
    <string name="select_a_dependable_task">Select at least one task to depend on</string>
    <string name="satisfy_following_task">When accomplishing following condition:</string>
    <string name="more">more</string>
    <string name="days">day(s)</string>
    <string name="owner">Owner:</string>
    <string name="add_owner">Add Owner</string>
    <string name="note">Note:</string>
    <string name="last_update">Last updated at: %s</string>

    <!-- for hami apps licensing-->
    <string name="checking_license">Checking License ...</string>
   	<string name="not_found_am">Hami Apps not found</string>
   	<string name="download_am">The software need to interact with Hami Apps software; Please click \"OK\" to download and install the Hami Apps software.</string>
   	<string name="notify_download_am">Click to download Hami Apps software.</string>
   	<string name="notify_remote_license_cehck">Click to check your license.</string>
   	<string name="notify_update_am">Click to update Hami Apps software.</string>
   	<string name="error_occurred">Error occurred!</string>
   	<string name="no_license">No license.</string>
</resources>
