<?xml version="1.0" encoding="utf-8"?>
<TableLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:stretchColumns="1"
  android:shrinkColumns="1">
	<TableRow android:id="@+id/batch_task_title_row">
		<TextView android:layout_width="wrap_content"
				  android:layout_height="wrap_content"
				  android:text="@string/item_title"
				  android:textAppearance="?android:attr/textAppearanceMedium"/>
				  
		<EditText android:id="@+id/batch_task_title_context"
				  android:layout_width="wrap_content" 
				  android:layout_height="wrap_content"
				  android:textAppearance="?android:attr/textAppearanceMedium"
				  android:text=""/>
				  
		<ImageButton android:id="@+id/batch_task_delete"
					 android:layout_width="wrap_content"
					 android:layout_height="wrap_content"
					 style="@style/MinusButton"/>
	</TableRow>
			
	<TableRow android:id="@+id/batch_task_owner_row">
		<RelativeLayout android:orientation="horizontal"
			  	  		android:layout_width="wrap_content"
			  	  		android:layout_height="wrap_content"
			  	  		android:layout_span="3">
			  	  		
		<ImageButton android:id="@+id/batch_btn_add_owner"
					 android:layout_width="wrap_content"
					 android:layout_height="wrap_content"
					 android:layout_alignParentRight="true"
					 style="@style/PlusButton"/>
					 
		<TextView android:id="@+id/batch_add_owner"
				  android:layout_width="wrap_content"
				  android:layout_height="wrap_content"
				  android:layout_centerVertical="true"
				  android:layout_toLeftOf="@id/batch_btn_add_owner"
				  android:text="@string/add_owner"
				  android:textStyle="bold"/>
				  
		<TextView android:layout_width="wrap_content"
				  android:layout_height="wrap_content"
				  android:text="@string/owner"
				  android:textAppearance="?android:attr/textAppearanceMedium"/>
				  
		</RelativeLayout>
	</TableRow>

</TableLayout>
