<?xml version="1.0" encoding="UTF-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
				android:orientation="vertical"
				android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:background="@drawable/background">
				
	<LinearLayout style="@style/ActionBarCompat">
		<TextView android:id="@+id/view_task_title"
				  style="@style/ActionBarCompatText"/>
	</LinearLayout>
			
	<ScrollView android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1">
	  
		<TableLayout android:layout_width="fill_parent" 
			 	 	 android:layout_height="fill_parent"
			 		 android:stretchColumns="1">
		
			<TableRow>
				<TextView style="@style/DisplayTaskEventLabel"
				  	  	  android:text="@string/project"/>

				<TextView android:id="@+id/tx_project" 
				 	 	  android:layout_width="wrap_content"
				  	  	  android:layout_height="wrap_content"
				  	  	  android:textStyle="bold"
				  	  	  android:textAppearance="?android:attr/textAppearanceMedium"/>
			</TableRow>
			
			<TableRow>
				<TextView style="@style/DisplayTaskEventLabel"
				 	  	  android:text="@string/due" />
				<TextView android:id="@+id/view_task_due"
						  android:layout_height="wrap_content"
				  		  android:layout_width="wrap_content"/>
			</TableRow>
	
			<TableRow>
				<TextView style="@style/DisplayTaskEventLabel"
				  	  	  android:text="@string/owner" />
				<TextView android:id="@+id/view_task_owner"
						  android:layout_height="wrap_content"
				  		  android:layout_width="wrap_content"/>
				 
			</TableRow>

			<TableRow>
				<TextView style="@style/DisplayTaskEventLabel"
				  	  	  android:text="@string/note" />
		
				<TextView android:id="@+id/view_task_remarks"
				  	  	  android:layout_width="wrap_content" 
				 	  	  android:layout_height="wrap_content"
				  	  	  android:text=""/>
			</TableRow>	
	
		</TableLayout>
	
	</ScrollView>

	<LinearLayout android:layout_width="fill_parent" 
				  android:layout_height="wrap_content"
				  android:orientation="horizontal" >
		<EditText android:id="@+id/view_task_comment_context"
				  android:layout_width="wrap_content" 
			 	  android:layout_height="wrap_content"
			 	  android:layout_weight="1"
				  android:layout_marginLeft="5dip"
				  android:layout_marginRight="5dip"
			 	  android:layout_gravity="center_vertical"
			 	  android:hint="新增留言"/>

		<Button android:id="@+id/view_task_send_comment"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="5dip"
				android:layout_marginRight="5dip"
				android:layout_gravity="center_vertical"
				android:text="張貼"
				android:textStyle="bold"/>
	</LinearLayout>
</LinearLayout>