<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:layout_column="1"
				android:layout_span="3"
				android:orientation="vertical">
				
	<TableLayout android:id="@+id/add_single_task_dependency_table"
				 android:layout_width="fill_parent"
			 	 android:layout_height="fill_parent"
			 	 android:stretchColumns="0">
			 	 
		<TableRow>
			<LinearLayout android:orientation="horizontal"
			  	  		  android:layout_width="wrap_content"
			  	  		  android:layout_height="wrap_content">
			<TextView android:id="@+id/single_depend_on" 
				 	  android:layout_width="wrap_content"
				  	  android:layout_height="wrap_content"
				  	  android:layout_gravity="center_vertical"
				  	  android:layout_centerVertical="true"
				  	  android:text="@string/satisfy_following_task"
				  	  android:layout_weight="1"
				  	  android:textStyle="bold"
				  	  android:textAppearance="?android:attr/textAppearanceMedium"/>
			<ImageButton android:id="@+id/single_depend_add_task" 
						 android:layout_width="wrap_content"
						 android:layout_height="wrap_content"
						 style="@style/PlusButton"/>
			</LinearLayout>
		</TableRow>
		
		<TableRow>
			<TableLayout  android:id="@+id/single_depend_on_view"
			  	  		  android:layout_width="wrap_content"
			  	  		  android:layout_height="wrap_content"
			  	  		  android:stretchColumns="0"/>
		</TableRow>
					
		<TableRow>
			<LinearLayout android:orientation="horizontal"
			  	  		  android:layout_width="wrap_content"
			  	  		  android:layout_height="wrap_content">
			  	  		  
				<TextView android:id="@+id/single_dependency_more" 
				 	 	  android:layout_width="wrap_content"
				  	  	  android:layout_height="wrap_content"
				  	  	  android:text="@string/more"
				  	  	  android:textStyle="bold"
				  	  	  android:textAppearance="?android:attr/textAppearanceMedium"/>
				  	  	 
				<EditText android:id="@+id/single_dependency_day_context" 
				 	  	  android:layout_width="wrap_content"
				  	  	  android:layout_height="wrap_content"
				  	  	  android:numeric="decimal"
					 	  android:singleLine="true"
					  	  android:width="50dp"
				  	  	  android:text="1"
				  	  	  android:textStyle="bold"
				  	  	  android:textAppearance="?android:attr/textAppearanceMedium"
				  	  	  android:layout_toRightOf="@id/single_dependency_more"/>
				  	  
				<TextView android:id="@+id/single_dependency_day" 
				 	  	  android:layout_width="wrap_content"
				  	  	  android:layout_height="wrap_content"
				  	  	  android:text="@string/days"
				  	  	  android:textStyle="bold"
				  	  	  android:textAppearance="?android:attr/textAppearanceMedium"
				  	  	  android:layout_toRightOf="@id/single_dependency_day_context"/>
			</LinearLayout>
		</TableRow>
					
	</TableLayout>
</RelativeLayout>