<?xml version="1.0" encoding="UTF-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" 
				android:id="@+id/tab1"
				android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:background="@drawable/background">

	<LinearLayout android:id="@+id/single_additem_title"
				  android:orientation="vertical"
			  	  android:layout_width="fill_parent"
			  	  android:layout_height="wrap_content">
			  
		<TextView android:layout_width="fill_parent"
			  	  android:layout_height="wrap_content" 
			  	  android:background="@android:color/darker_gray"
			  	  android:text="@string/add_task"
			  	  android:gravity="center"
			  	  android:textColor="@android:color/white"
			  	  android:textAppearance="?android:attr/textAppearanceMedium"
			  	  android:textStyle="bold"/>
			  
		<TextView android:layout_width="fill_parent"
			 	  android:layout_height="wrap_content" 
			  	  android:text=""/>
			  
	</LinearLayout>
	
	<TableLayout android:id="@+id/single_additem_button"
        			 android:layout_width="fill_parent" 
        			 android:layout_height="wrap_content"
					 android:stretchColumns="*"
					 android:layout_alignParentBottom="true">
	
		<TableRow android:background="@android:color/darker_gray">
			<Button android:id="@+id/single_additem_finish" 
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_centerInParent="true"
					android:gravity="center"
					android:text="@string/done"
					android:textStyle="bold"/>
	
			<Button android:id="@+id/single_additem_cancel" 
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_toRightOf="@id/single_additem_finish"
					android:gravity="center"
					android:text="@string/cancel"
					android:textStyle="bold"/>
		</TableRow>
		
	</TableLayout>
			
	<ScrollView android:id="@+id/single_additem_main"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_above="@id/single_additem_button"
				android:layout_below="@id/single_additem_title">    
	  
		<TableLayout android:layout_width="fill_parent" 
			 	 	 android:layout_height="fill_parent"
			 		 android:stretchColumns="*">

			<TableRow>
				<TextView android:id="@+id/single_title" 
				 	 	  android:layout_width="wrap_content"
				  	  	  android:layout_height="wrap_content"
				  	  	  android:text="標題" 
				  	  	  android:textStyle="bold"
				  	  	  android:textAppearance="?android:attr/textAppearanceMedium"/>
	
				<EditText android:id="@+id/single_title_context"
				  	  	  android:layout_width="fill_parent" 
				  	  	  android:layout_height="wrap_content"
				  	  	  android:text="" 
				  	  	  android:layout_span="3"
				  	  	  android:textAppearance="?android:attr/textAppearanceMedium"/>
			</TableRow>
			
			<TableRow>
				<TextView android:id="@+id/single_item_create_under" 
				 	 	  android:layout_width="wrap_content"
				  	  	  android:layout_height="wrap_content"
				  	  	  android:text="建立於"
				  	  	  android:textStyle="bold"/>

				<TextView android:id="@+id/single_item_create_under_context" 
				 	 	  android:layout_width="wrap_content"
				  	  	  android:layout_height="wrap_content"
				  	  	  android:text="" 
				  	  	  android:layout_span="3"
				  	  	  android:textStyle="bold"
				  	  	  android:textAppearance="?android:attr/textAppearanceMedium"/>
			</TableRow>
	
			<TableRow>
				<TextView android:id="@+id/single_time"
					  	  android:layout_width="wrap_content" 
				  	  	  android:layout_height="wrap_content"
				 	  	  android:text="到期"
				 	  	  android:textStyle="bold"
				 	  	  android:textAppearance="?android:attr/textAppearanceMedium"/>

				<ImageButton android:id="@+id/single_date" 
					 	 	 android:layout_width="wrap_content"
					 	 	 android:layout_height="wrap_content"
	  				 	 	 android:src="@drawable/date"/>
	
				<ImageButton android:id="@+id/single_dependent" 
							 android:layout_width="wrap_content"
							 android:layout_height="wrap_content" 
							 android:src="@drawable/dependency"/>
	
				<ImageButton android:id="@+id/single_undetermined" 
							 android:layout_width="wrap_content"
							 android:layout_height="wrap_content" 
							 android:src="@drawable/undetermined"/>
			</TableRow>
			
			<TableRow>
				<RelativeLayout android:id="@+id/single_date_chooser"
								android:layout_height="wrap_content"
				  				android:layout_width="wrap_content"
				  				android:layout_column="1"
				  				android:layout_span="3"
				  				android:orientation="vertical">
				</RelativeLayout>
			</TableRow>
	
			<TableRow>
				<TextView android:id="@+id/single_owner" 
				  	  	  android:layout_width="wrap_content"
				 	  	  android:layout_height="wrap_content"
				  	  	  android:text="負責"
				  	  	  android:textStyle="bold"
				  	  	  android:textAppearance="?android:attr/textAppearanceMedium"/>
	
				<TextView android:id="@+id/single_owner_context"
				  	  	  android:layout_width="wrap_content" 
				  	  	  android:layout_height="wrap_content"
				  	  	  android:gravity="center"
				  	 	  android:text="none"/>
			</TableRow>
	
			<TableRow>
				<EditText android:id="@+id/single_owneradd_context"
				 	  	  android:layout_width="wrap_content" 
				  	  	  android:layout_height="wrap_content"
				  	  	  android:layout_column="1"
				  	  	  android:layout_span="2" 
				  	  	  android:text=""/>
				  	  
				<ImageButton android:id="@+id/single_owner_add" 
					 	 	 android:layout_width="wrap_content"
					 	 	 android:layout_height="wrap_content"
					 	 	 android:src="@drawable/ic_input_add"/>
			</TableRow>
			
			<TableRow>
				<TextView android:id="@+id/single_remarks" 
				 	  	  android:layout_width="wrap_content"
				  	  	  android:layout_height="wrap_content"
				  	  	  android:text="備註"
				  	  	  android:textStyle="bold"
				  	  	  android:textAppearance="?android:attr/textAppearanceMedium"/>
		
				<EditText android:id="@+id/single_remarks_context"
				  	  	  android:layout_width="wrap_content" 
				 	  	  android:layout_height="wrap_content"
				  	  	  android:layout_span="3"
				  	  	  android:text=""/>
			</TableRow>	
	
		</TableLayout>
	
	</ScrollView>

</RelativeLayout>